monitoring/manifests/alertmanager-main-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.hubbe.club"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify"
  name: alertmanager-main
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.hubbe.club
      http:
        paths:
          - backend:
              service:
                name: alertmanager-main
                port:
                  name: web
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alertmanager.hubbe.club
